Rebooting Home Node part
Signed-off-by: clinique <gael@lhopital.org>